# Senior_Proj

./: .gitignore  README.md  pointindexing_template.cu
proj2_template/: CMakeLists.txt  download_data.py  haversine_library.cpp  haversine_library.cu  haversine_library.template  parser.py  test_3cities.py  test_nycyellowcab.py  test_purepython.py
